changed in test

--- a/CloudAgent/test-output/index.html
+++ b/CloudAgent/test-output/index.html
@@ -107,17 +107,12 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.CA.qa.TestCases.ConfigurationPageTest" hash-for-method="AddAgents(edit, sannnn11, sannnn1n1, , , , , , NICEEEE, all, no, no, no, no, yes)">AddAgents(edit, sannnn11, sannnn1n1, , , , , , NICEEEE, all, no, no, no, no, yes)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.CA.qa.TestCases.ConfigurationPageTest" hash-for-method="AddAgents(edit, sannnn1n1, sannnn11, , 100, santu, 11, san@san.com, nice , sele,gen, yes, yes, no, no, yes)">AddAgents(edit, sannnn1n1, sannnn11, , 100, santu, 11, san@san.com, nice , sele,gen, yes, yes, no, no, yes)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.CA.qa.TestCases.ConfigurationPageTest" hash-for-method="AddAgents(delete, sannnn11, sannnn1n1, , , , , , , all, no, no, no, no, yes)">AddAgents(delete, sannnn11, sannnn1n1, , , , , , , all, no, no, no, no, yes)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.CA.qa.TestCases.ConfigurationPageTest" hash-for-method="AddPhoneNos(delete, santuuu, , 95535, , , )">AddPhoneNos(delete, santuuu, , 95535, , , )</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -128,6 +123,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.CA.qa.TestCases.ConfigurationPageTest" hash-for-method="AddPhoneNos(Add, santuu2, , 95535, , 5, )">AddPhoneNos(Add, santuu2, , 95535, , 5, )</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.CA.qa.TestCases.ConfigurationPageTest" hash-for-method="AddPhoneNos(delete, santuuu, , 95535, , , )">AddPhoneNos(delete, santuuu, , 95535, , , )</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -158,26 +158,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="AddAgents(edit, sannnn11, sannnn1n1, , , , , , NICEEEE, all, no, no, no, no, yes)">
+                  </a> <!-- AddAgents(edit, sannnn11, sannnn1n1, , , , , , NICEEEE, all, no, no, no, no, yes) -->
+                  <span class="method-name">AddAgents</span>
+                  <span class="parameters">(edit, sannnn11, sannnn1n1, , , , , , NICEEEE, all, no, no, no, no, yes)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="AddAgents(edit, sannnn1n1, sannnn11, , 100, santu, 11, san@san.com, nice , sele,gen, yes, yes, no, no, yes)">
                   </a> <!-- AddAgents(edit, sannnn1n1, sannnn11, , 100, santu, 11, san@san.com, nice , sele,gen, yes, yes, no, no, yes) -->
                   <span class="method-name">AddAgents</span>
                   <span class="parameters">(edit, sannnn1n1, sannnn11, , 100, santu, 11, san@san.com, nice , sele,gen, yes, yes, no, no, yes)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddAgents(delete, sannnn11, sannnn1n1, , , , , , , all, no, no, no, no, yes)">
-                  </a> <!-- AddAgents(delete, sannnn11, sannnn1n1, , , , , , , all, no, no, no, no, yes) -->
-                  <span class="method-name">AddAgents</span>
-                  <span class="parameters">(delete, sannnn11, sannnn1n1, , , , , , , all, no, no, no, no, yes)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddPhoneNos(delete, santuuu, , 95535, , , )">
-                  </a> <!-- AddPhoneNos(delete, santuuu, , 95535, , , ) -->
-                  <span class="method-name">AddPhoneNos</span>
-                  <span class="parameters">(delete, santuuu, , 95535, , , )</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -196,12 +188,20 @@
                   <span class="parameters">(Add, santuu2, , 95535, , 5, )</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="AddPhoneNos(delete, santuuu, , 95535, , , )">
+                  </a> <!-- AddPhoneNos(delete, santuuu, , 95535, , , ) -->
+                  <span class="method-name">AddPhoneNos</span>
+                  <span class="parameters">(delete, santuuu, , 95535, , , )</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--1893805958/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--1026880795/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -254,32 +254,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'AddAgents')
 data.setCell(0, 2, 'com.CA.qa.TestCases.ConfigurationPageTest')
-data.setCell(0, 3, 6849);
+data.setCell(0, 3, 6999);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'AddAgents')
 data.setCell(1, 2, 'com.CA.qa.TestCases.ConfigurationPageTest')
-data.setCell(1, 3, 5300);
+data.setCell(1, 3, 6251);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'AddPhoneNos')
+data.setCell(2, 1, 'AddAgents')
 data.setCell(2, 2, 'com.CA.qa.TestCases.ConfigurationPageTest')
-data.setCell(2, 3, 3535);
+data.setCell(2, 3, 5434);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'AddPhoneNos')
 data.setCell(3, 2, 'com.CA.qa.TestCases.ConfigurationPageTest')
-data.setCell(3, 3, 2962);
+data.setCell(3, 3, 3654);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'AddPhoneNos')
 data.setCell(4, 2, 'com.CA.qa.TestCases.ConfigurationPageTest')
-data.setCell(4, 3, 2040);
+data.setCell(4, 3, 3105);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'AddAgents')
+data.setCell(5, 1, 'AddPhoneNos')
 data.setCell(5, 2, 'com.CA.qa.TestCases.ConfigurationPageTest')
-data.setCell(5, 3, 2002);
+data.setCell(5, 3, 2139);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -312,71 +312,71 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">AddAgents(add, sannnn1n1, , , 100, santu, 11, , NICEEEE, all, yes, no, no, no, yes)</span>
-                <span class="method-start">3139 ms</span>
+                <span class="method-start">3034 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">nteardown</span>
-                <span class="method-start">8441 ms</span>
+                <span class="method-start">8469 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(public void com.CA.qa.TestCases.ConfigurationPageTest.AddAgents(java.lang.String,java.lang.String,ja...)</span>
-                <span class="method-start">8763 ms</span>
+                <span class="method-start">8842 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">AddAgents(edit, sannnn1n1, sannnn11, , 100, santu, 11, san@san.com, nice , sele,gen, yes, yes, no, no, yes)</span>
-                <span class="method-start">11247 ms</span>
+                <span class="method-start">10928 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">nteardown</span>
-                <span class="method-start">18098 ms</span>
+                <span class="method-start">17929 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(public void com.CA.qa.TestCases.ConfigurationPageTest.AddAgents(java.lang.String,java.lang.String,ja...)</span>
-                <span class="method-start">18407 ms</span>
+                <span class="method-start">18260 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">AddAgents(delete, sannnn11, sannnn1n1, , , , , , , all, no, no, no, no, yes)</span>
-                <span class="method-start">21008 ms</span>
+                <span class="method-name">AddAgents(edit, sannnn11, sannnn1n1, , , , , , NICEEEE, all, no, no, no, no, yes)</span>
+                <span class="method-start">20550 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">nteardown</span>
-                <span class="method-start">23012 ms</span>
+                <span class="method-start">26802 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(public void com.CA.qa.TestCases.ConfigurationPageTest.AddPhoneNos(java.lang.String,java.lang.Object,...)</span>
-                <span class="method-start">23371 ms</span>
+                <span class="method-start">27217 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">AddPhoneNos(Add, santuu2, , 95535, , 5, )</span>
-                <span class="method-start">25921 ms</span>
+                <span class="method-start">29594 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">nteardown</span>
-                <span class="method-start">28885 ms</span>
+                <span class="method-start">32700 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(public void com.CA.qa.TestCases.ConfigurationPageTest.AddPhoneNos(java.lang.String,java.lang.Object,...)</span>
-                <span class="method-start">29193 ms</span>
+                <span class="method-start">33010 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">AddPhoneNos(edit, santuu2, santuuu, 95535, , , )</span>
-                <span class="method-start">31714 ms</span>
+                <span class="method-start">35514 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">nteardown</span>
-                <span class="method-start">35251 ms</span>
+                <span class="method-start">39172 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(public void com.CA.qa.TestCases.ConfigurationPageTest.AddPhoneNos(java.lang.String,java.lang.Object,...)</span>
-                <span class="method-start">35569 ms</span>
+                <span class="method-start">39574 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">AddPhoneNos(delete, santuuu, , 95535, , , )</span>
-                <span class="method-start">37962 ms</span>
+                <span class="method-start">41924 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">nteardown</span>
-                <span class="method-start">40003 ms</span>
+                <span class="method-start">44064 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
