--- a/CloudAgent/test-output/old/Default suite/methods.html
+++ b/CloudAgent/test-output/old/Default suite/methods.html
@@ -1,22 +1,70 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:58:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddCampaignPageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:58:39</td>   <td>3456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCampaignPageTest.AddCampaign(java.lang.String, java.lang.String, java.lang.Object, java.lang.Object, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object)[pri:1, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">AddCampaign</td> 
-  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:59:06</td>   <td>30264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddCampaignPageTest.nteardown()[pri:0, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">&lt;&lt;nteardown</td> 
-<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:59:06</td>   <td>30752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddCampaignPageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:59:09</td>   <td>33871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCampaignPageTest.RunCampaign(java.lang.String, java.lang.String, java.lang.Object, java.lang.Object, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object)[pri:2, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">RunCampaign</td> 
-  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:59:26</td>   <td>50197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddCampaignPageTest.nteardown()[pri:0, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">&lt;&lt;nteardown</td> 
-<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:59:26</td>   <td>50624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddCampaignPageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:59:29</td>   <td>53817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCampaignPageTest.DeleteCampaign(java.lang.String, java.lang.String, java.lang.Object, java.lang.Object, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object, java.lang.Object)[pri:3, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">DeleteCampaign</td> 
-  <td>main@1536031937</td>   <td></td> </tr>
-<tr bgcolor="deb2b1">  <td>19/12/11 16:59:38</td>   <td>62236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddCampaignPageTest.nteardown()[pri:0, instance:com.CA.qa.TestCases.AddCampaignPageTest@43195e57]">&lt;&lt;nteardown</td> 
-<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:38:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:38:46</td>   <td>8442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.verifyATBHomePage_TitleTest()[pri:1, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">verifyATBHomePage_TitleTest</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:38:46</td>   <td>8460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:38:49</td>   <td>12306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:38:55</td>   <td>17498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.verifyAgentStatusTestAtStart()[pri:2, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">verifyAgentStatusTestAtStart</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:38:55</td>   <td>17536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:38:58</td>   <td>21371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:04</td>   <td>26511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentStatusToPause()[pri:3, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentStatusToPause</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:11</td>   <td>34013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:15</td>   <td>37889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:20</td>   <td>42788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentStatusToReady()[pri:4, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentStatusToReady</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:21</td>   <td>43481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:24</td>   <td>46476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:29</td>   <td>52053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAtStart()[pri:5, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentModeAtStart</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:29</td>   <td>52097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:32</td>   <td>55097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:37</td>   <td>60131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterManual()[pri:6, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentModeAfterManual</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:39</td>   <td>61465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:43</td>   <td>65537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:48</td>   <td>70490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterInbound()[pri:7, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentModeAfterInbound</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:49</td>   <td>71839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:53</td>   <td>75814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:39:58</td>   <td>80736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterPreview()[pri:8, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentModeAfterPreview</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:00</td>   <td>82573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:03</td>   <td>86395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:08</td>   <td>91112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterProgressive()[pri:9, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentModeAfterProgressive</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:10</td>   <td>92435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:14</td>   <td>96788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:29</td>   <td>111957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterBlended()[pri:10, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentModeAfterBlended</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:30</td>   <td>113253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:34</td>   <td>117088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:39</td>   <td>122025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentATBForceRelease()[pri:11, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">VerifyAgentATBForceRelease</td> 
+  <td>main@1334042472</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>20/01/10 17:40:41</td>   <td>123727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@402bba4f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1334042472</td>   <td></td> </tr>
 </table>
