--- a/CloudAgent/test-output/old/Default suite/classes.html
+++ b/CloudAgent/test-output/old/Default suite/classes.html
@@ -4,14 +4,54 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.CA.qa.TestCases.AddCampaignPageTest</td>
+<td>com.CA.qa.TestCases.AgentToolBarHomePageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeleteCampaign</td>
+<td>VerifyAgentStatusToReady</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentModeAfterPreview</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentModeAfterBlended</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentStatusToPause</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentModeAfterProgressive</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAgentStatusTestAtStart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentModeAtStart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentModeAfterInbound</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentModeAfterManual</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyAgentATBForceRelease</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyATBHomePage_TitleTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -28,7 +68,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>nteardown</td>
+<td>teardown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
